--- a/BiocWorkflow_todo/09rnaEndToEnd_en.Rmd
+++ b/BiocWorkflow_todo/09rnaEndToEnd_en.Rmd
@@ -1295,7 +1295,7 @@ UC 代表患者患的疾病。
 我们将使用 PROBEID 8164535 挑选基因。
 它具有基因符号 *CRAT*  并将在以下代码中命名。
 
-** *CRAT* 基因拟合线性模型的插图**
+**插图：*CRAT* 基因拟合线性模型**
 
 在拟合线性模型之前，
 我们分别研究了该基因在非发炎和发炎组织中
