--- a/BiocWorkflow_todo/09rnaEndToEnd_en.Rmd
+++ b/BiocWorkflow_todo/09rnaEndToEnd_en.Rmd
@@ -1541,62 +1541,62 @@ nrow(subset(table_UC, P.Value < 0.001))
 ```
 
 
-However, it is impossible
-to determine a precise bound on the number of false positive genes
-in this list. All that we can say using p-values is that we have 
-at most `r nrow(table_UC)` (total number of tests) * 0.001
-= `r nrow(table_UC)* 0.001` false positive genes in our list. Therefore, 
-by choosing a p-value cutoff of 0.001, as much as
+然而，
+不可能确定该列表中假阳性基因数量的精确界限。
+我们所说的使用 p 值的是我们列表中最多 
+`r nrow(table_UC)` (测试总数) * 0.001
+= `r nrow(table_UC)* 0.001` 个假阳性基因。
+因此，通过选择 0.001 的 p 值截止值，
+鉴定为差异表达的基因中多达
 `r round(nrow(table_UC)* 0.001 / nrow(subset(table_UC, P.Value < 0.001))*100, 2)`% 
-of our genes
-identified as differentially expressed might be false positives. 
+可能是假阳性。
 
-Thus, we can see that the "raw" p-values are very "liberal" when
-looking at many tests simultaneously. We therefore need error
-rates adapted to the multiple testing situation. By far the 
-most popular one in molecular biology is the **false discovery
-rate** or FDR for short. It is the percentage of false positives 
-among all positives. As we have seen, the FDR of our genes list
-using a simple p-value cutoff might be quite high.
+因此，我们可以看到，当同时观察许多测试时，“原始” p 值非常“自由”。
+因此，我们需要适应多种测试情况的错误率。 
+到目前为止，分子生物学中最受欢迎的是错误发现率 **false discovery rate** 或简称 FDR。 
+这是所有积极因素中误报的百分比。
+正如我们所看到的，
+使用简单的 p 值截止值列出的基因列表
+的 FDR 可能非常高。
 
-On the other hand, we can see a clear peak in the p-value histogram 
-(Figure \@ref(fig:extractResultsUC)), caused by the differentially
-expressed genes. There we expect the actual FDR of our list 
-to be lower.
+另一方面，我们可以看到由差异表达的基因引起的 p 值直方图中的清晰峰值 
+(Figure \@ref(fig:extractResultsUC)),
+在那里，
+我们预计列表的实际 FDR 会更低。
 
-The FDR at a given cutoff is given by the "adjusted" p-value in
-the results table.
+给定截止值下的 FDR
+由结果表中的“调整后的” p 值给出。
 
 ```{r FDRforUC}
 tail(subset(table_UC, P.Value < 0.001))
 ```
 
-The adjusted p-value for a raw p-value of 0.001 in 
-the table is `r max(subset(table_UC, P.Value < 0.001)$adj.P.Val)`,
-which is an order of magnitude lower than the FDR we can infer 
-from p-values alone.
+表中原始 p 值 0.001 
+的调整后的 p 值为 `r max(subset(table_UC, P.Value < 0.001)$adj.P.Val)`,
+这比我们仅从 p 值推断
+的 FDR 低一个数量级。
 
-So although this is not recommended in general,
-we also use a p-value cutoff at 0.001 in the following
-in order to be able to compare our workflow results to the paper results. 
+因此，尽管一般不推荐这样做，
+但我们还在下面使用 0.001 的 p 值截止值，
+以便能够将我们的工作流程结果与纸张结果进行比较。
 
-The paper results can be downloaded as excel files from
-[http://links.lww.com/IBD/A795](http://links.lww.com/IBD/A795) and 
-should be saved as an .xlsx file named `palmieri_DE_res.xlsx` in 
-your working directory. 
+论文结果可以从
+[http://links.lww.com/IBD/A795](http://links.lww.com/IBD/A795) 
+下载为 .xlsx 文件， 
+并应保存为工作目录中名为 `palmieri_DE_res.xlsx`
 
-Note that while the paper uses p-value cutoffs, it also reports the
-corresponding FDRs (just as we did for the UC data here).
+请注意，虽然本文使用 p 值截止值，
+但它也会报告相应的 FDR（就像我们在此处对 UC 数据所做的那样）。
 
-For a p-value cutoff of 0.001, the corresponding FDRs are 0.05 in 
-Crohn's disease  and 0.02 in ulcerative colitis. There are four tables in total, 
-giving the list of up and downregulated genes in CD and UC, respectively.
-We calculate the overlap between our results and the ones from the 
-paper as the ratio of the genes that were found in both analyses 
-and the genes that were only found in the paper.
+对于 p 值截止值为 0.001，相应的 FDR 在克罗恩病中为 0.05，
+在溃疡性结肠炎中为 0.02。
+总共有四个表，
+分别给出 CD 和 UC 中上调和下调基因的列表。
+我们计算了我们的结果与论文中的结果之间的重叠，
+即两种分析中发现的基因与仅在论文中发现的基因的比率。
 
-We also calculate the total number of diffentially expressed
-genes that we find in our workflow analysis.
+我们还计算了在工作流分析中
+发现的差异表达基因的总数。
  
 ```{r compareDEgenes, dependson=c("extractResultsUC", "extractResultsCD")}
 fpath <- system.file("extdata", "palmieri_DE_res.xlsx", package = "maEndToEnd")
@@ -1624,27 +1624,27 @@ total_genenumber_CD
 total_genenumber_UC
 ```
 
-We find `r total_genenumber_CD` (CD) and `r total_genenumber_UC` (UC) 
-differentially expressed genes ("DE-genes").
+我们发现 `r total_genenumber_CD` (CD) 和 `r total_genenumber_UC` (UC) 
+差异表达的基因（“DE-基因”）。
 
-In the paper, 298 (CD) and 520 (UC) DE-genes were found for the two diseases 
-at the same cutoff. This higher number of DE-genes identified is probably
-due to the increased power of the blocking according to the individuals
-and the moderated variance estimation that `r Biocpkg("limma") ` performs.
+在该论文中，在相同的截止值下发现了两种疾病的 298 (CD) and 520 (UC) DE基因。
+鉴定的这种更高数量的 DE-基因可能是由于
+根据个体的阻断功率增加以及
+`r Biocpkg("limma") ` 执行的调节方差估计。
 
-We see that we get a moderate overlap of `r overlap_CD` for CD and
-`r overlap_UC` for UC, showing that both analyses lead to
-somewhat comparable results. 
+我们看到我们得到 CD 的 `r overlap_CD`  和
+UC 的 `r overlap_UC` 的适度重叠，
+表明两种分析都会导致一些可比较的结果。
 
-## Visualization of DE analysis results - volcano plot
+## DE 分析结果的可视化 - 火山图
 
-For a visualization of the differentially expressed genes, we create a volcano 
-plot, which is commonly used to summarize the results of a differential expression analysis in a single figure.
+为了显示差异表达的基因，我们创建了一个火山图， 
+通常用于总结单个图中差异表达分析的结果。
 
-For a better overview, we only show gene symbols of genes with 
-a fold change greater than 1, which we define in the `volcano_names` object. The 
-`highlight` option in the `volcanoplot` function is set to 100 and thus only 
-labels the 100 genes with the lowest p-values. 
+为了更好地概述，我们只显示倍数大于 1 的基因的基因符号，
+我们在 `volcano_names` 对象中定义。
+`volcanoplot` 函数中 `highlight` 高亮选项设置为 100，
+因此仅标记具有最低 p 值的 100 个基因。
 
 ```{r VolcanoPlot, fig.cap="Volcano plot of the DE-genes", fig.height=8, fig.width=7}
 
@@ -1657,51 +1657,51 @@ volcanoplot(palmieri_fit_CD, coef = 1L, style = "p-value", highlight = 100,
             xlab = "Log2 Fold Change", ylab = NULL, pch=16, cex=0.35)
 ```
 
-We can now do a little research on the biological function of genes that show a
-high foldchange, for example the gene with the symbol S100A8 on the right side
-of the plot (Figure \@ref(fig:VolcanoPlot)). If we search for this gene symbol on
-[genecards.org](https://www.genecards.org), we find that it encodes for a
-protein that builds a pro-inflammatory complex in association with another
-protein.
+我们现在可以对显示高倍数变化的基因的生物学功能进行一些研究，
+例如在图的右侧具有符号 S100A8 的基因
+(Figure \@ref(fig:VolcanoPlot)). 如果我们在
+[genecards.org](https://www.genecards.org) 上搜索这个基因符号，
+我们发现它编码的蛋白质构建了
+与另一种蛋白质相关的促炎复合物。
 
-# Gene ontology (GO) based enrichment analysis
+# 基因本体论（GO）为基础的浓缩分析
 
-As discussed above, it is recommended to use an FDR cutoff in differential 
-expression analysis rather than a p-value cutoff, 
-since this way you control an explicitly defined error rate 
-and the results are easier to interpret and
-to compare. For the following enrichment analysis, we create tables with 
-differentially expressed genes for CD and UC, respectively, 
-and choose an FDR cutoff of 10\%. Here, we focus on the CD subset of the data.
+如上所述，建议在差分表达式分析中使用 FDR 截止而不是 p 值截止，
+因为这样您可以控制明确定义的错误率，
+并且结果更易于解释和比较。
+对于以下富集分析，
+我们分别创建具有 CD 和 UC 的差异表达基因的表，
+并选择 10％ 的 FDR 截止值。
+在这里，我们关注数据的 CD 子集。
 
 
 ```{r FDRcontrolledDEgenes, dependson=c("extractResultsUC", "extractResultsCD"), eval=TRUE}
 DE_genes_CD <- subset(table_CD, adj.P.Val < 0.1)$PROBEID
 ```
 
-We can now try to characterize the identified differentially expressed genes
-more in detail by performing a GO enrichment analysis. Essentially the
-gene ontology ([http://www.geneontology.org/](http://www.geneontology.org/)) is 
-a hierarchically organized collection of functional gene sets
+我们现在可以通过进行 GO 富集分析来更详细地表征鉴定的差异表达基因。
+本质上，
+基因本体论 ([http://www.geneontology.org/](http://www.geneontology.org/))
+是一个分层组织的功能基因集合
 [@Ashburner_2000; @GO_2015; @du_Plessis_2011]. 
 
-## Matching the background set of genes
+## 匹配背景基因组
 
-The function ` genefinder ` from the `r Biocpkg("genefilter") ` 
-package [@Bourgon_2010] 
-will be used to find a background set of genes that are similar in expression 
-to the differentially expressed genes. We then check whether 
-the background has roughly the same distribution
-of average expression strength as the foreground.
+来自 `r Biocpkg("genefilter") `包 [@Bourgon_2010] 的
+` genefinder ` 函数
+将用于找到与差异表达基因的表达相似的基因背景组。 
+然后我们检查背景是否具有
+与前景大致相同的
+平均表达强度分布。 
 
-We do this in order not to select a biased background since the gene set testing
-is performed by a simple Fisher test on a 2x2 table. Note that this approach
-is very similar to commonly used web tools like GOrilla [@Eden_2009]. 
+我们这样做是为了不选择有偏见的背景，
+因为基因集测试是在 2x2 表上通过简单的 Fisher 测试进行的。
+请注意，此方法与常用的 Web 工具 GOrilla [@Eden_2009] 非常相似。 
 
-For every differentially expressed gene, we try to find genes with similar
-expression with `genefinder`. The `genefinder` function returns a list with two 
-elements for each gene: one with the indices of the 
-background genes found and one with the distances to the DE-genes:
+对于每个差异表达的基因，我们尝试用
+`genefinder` 找到具有相似表达的基因。`genefinder` 函数返回一个列表，
+其中包含每个基因的两个元素：
+一个具有发现的背景基因的索引，另一个具有与 DE基因的距离：
 
 ```{r GOAnalysisCreateBackgrounds, eval=TRUE, warning=FALSE, message=FALSE}
 back_genes_idx <- genefilter::genefinder(palmieri_final, 
@@ -1709,23 +1709,23 @@ back_genes_idx <- genefilter::genefinder(palmieri_final,
                                         method = "manhattan", scale = "none")
 ```
 
-We have to extract the PROBEIDs, which correspond to the indices. 
-We do that by using the `sapply` 
-function, which gives us a single matrix with the DE-genes as column names 
-and the  PROBEIDs of the corresponding background genes in the cells below:
+我们必须提取与索引相对应的 PROBEIDs, 我们通过使用
+`sapply` 函数来实现这一点，
+它为我们提供了一个单独的矩阵，
+其中 DE-genes 作为列名，以及下面单元格中相应背景基因的 PROBEID：
 
 ```{r GOAnalysisCreateBackgrounds2, eval=TRUE, warning=FALSE, message=FALSE}
 back_genes_idx <- sapply(back_genes_idx, function(x)x$indices)
 ```
 
-We then create a vector `back_genes` containing all background gene PROBEIDs:
+然后我们创建一个包含所有背景基因 PROBEID 的载体 `back_genes`：
 
 
 
-In order to eliminate foreground genes, i.e. DE-genes, from the `back_genes` 
-set, we use the `setdiff` function. It returns all elements from the first 
-argument (`back_genes`) that are not part of the second argument 
-(`DE_genes_CD`). 
+为了从 `back_genes` 集中消除前景基因，即 DE 基因，
+我们使用 `setdiff` 函数。 它返回第一个参数
+(`back_genes`) 中不属于第二个参数
+(`DE_genes_CD`) 的所有元素。
 With the `intersect` function, we verify that we were successful: 
 it should return 0, as there shouldn't be any intersect anymore between
 `back_genes`and `DE_genes_CD`:
