--- a/BiocWorkflow_todo/09rnaEndToEnd_en.Rmd
+++ b/BiocWorkflow_todo/09rnaEndToEnd_en.Rmd
@@ -1902,14 +1902,14 @@ showSigOfNodes(top_GO_data, score(result_top_GO_elim), firstSigNodes = 3,
 
 # 使用 reactome 的途径富集分析
 
-The package `r Biocpkg("ReactomePA") ` offers the possibility to test enrichment
-of specific pathways using the free, open-source, curated and peer reviewed 
-[Reactome](http://www.reactome.org/) pathway database [@Croft_2013; @Fabregat_2017]. 
-The package requires entrez identifiers, so we convert our PROBEIDs 
-(transcript cluster identifiers) to entrez identifiers 
-using the function `mapIDs` from the package `r Biocpkg("AnnotationDbi")`. 
-This will create a named vector that maps the PROBEIDs to the entrez ones, 
-with the PROBEIDs as names and the entrez ids as vector elements.
+`r Biocpkg("ReactomePA") ` 包提供了
+使用免费，开源，策划和同行评审的
+[Reactome](http://www.reactome.org/) 途径数据库测试特定途径富集的可能性 [@Croft_2013; @Fabregat_2017]. 
+该软件包需要 entrez 标识符，因此我们使用
+`r Biocpkg("AnnotationDbi")` 包中的
+`mapIDs` 函数将我们的 PROBEID（转录集群标识符）转换为 entrez 标识符。
+这将创建一个命名向量，将 PROBEID 映射到 entrez，将 PROBEID 作为名称，
+将 entrez ID 作为向量元素。
 
 
 ```{r mapIDsToEntrez, dependson="createFactorOfInterestingGenes", message = FALSE}
@@ -1919,11 +1919,11 @@ entrez_ids <- mapIds(hugene10sttranscriptcluster.db,
       column = "ENTREZID")
 ```
 
-We can now run the enrichment analysis that performs a statistical test
-based on the hypergeoemtric distribution that is the same as a one sided 
-Fisher-test, which `r Biocpkg("topGO")` calls "Fisher-classic".
-Details can be found in the vignette of the `r Biocpkg("DOSE")` 
-package [@Yu_2014].
+我们现在可以运行富集分析，
+该分析基于超对称分布执行统计测试，该分布与单侧 Fisher 测试相同，
+`r Biocpkg("topGO")` 称为 "Fisher-classic"。
+详细信息可以在 `r Biocpkg("DOSE")` 包的插图中找到
+[@Yu_2014]。
 
 ```{r runReactomeEnrichment, fig.cap="Enriched Reactome pathways and their p–values as a bar chart.", eval = TRUE, warning=FALSE}
 reactome_enrich <- enrichPathway(gene = entrez_ids[DE_genes_CD], 
@@ -1941,52 +1941,52 @@ reactome_enrich@result$Description <- paste0(str_sub(
 head(as.data.frame(reactome_enrich))[1:6]
 ```
 
-Note that we trimmed pathway names to 20 characters.
+请注意，我们将通道名称修剪为20个字符。
 
 ## 可视化基于反应组的分析结果
 
-The top pathways can be displayed as a bar chart that displays all categories
-with a p-value below the specified cutoff (Figure \@ref(fig:reactomeBar)).
+顶部路径可以显示为条形图，
+显示 p 值低于指定截止值的所有类别 (Figure \@ref(fig:reactomeBar)).
 
 ```{r reactomeBar, dependson="runReactomeEnrichment", fig.cap="Enriched Reactome pathways and their p–values as a bar chart."}
 barplot(reactome_enrich)
 ```
 
-The "enrichment map" from the package `r Biocpkg("enrichplot")` 
-displays the results of the enrichment analysis as 
-a graph, where the color represents the p-value of the pathway and the
-edge-thickness (that is the line connecting two pathways) is proportional 
-to the number of overlapping genes between two pathways.
+`r Biocpkg("enrichplot")` 包中的“富集图”将
+富集分析的结果显示为图形，
+其中颜色表示路径的 p 值，
+边缘厚度（即连接两个路径的线）与数量成比例 
+两个途径之间的重叠基因
 
 ```{r emapplot, dependson="runReactomeEnrichment", fig.width=6, fig.height = 7, fig.cap="Enriched Reactome pathways enrichment results as a graph."}
 emapplot(reactome_enrich, showCategory = 10)
 ```
 
-Again, the graph in Figure \@ref(fig:emapplot) shows pathways related 
-to signalling and immune response. 
+同样，图  \@ref(fig:emapplot) 中的图表显示了
+与信号传导和免疫应答相关的途径。 
 
-The package `r Biocpkg("clusterProfiler") ` [@Yu_2012] can also perform these 
-analyses using downloaded KEGG data. Furthermore, 
-the package `r Biocpkg("EnrichmentBrowser")`
-[@Geistlinger_2016] additionally offers network-based enrichment analysis of individual 
-pathways. This allows the mapping of the expression data at hand to known
-regulatory interactions.
+`r Biocpkg("clusterProfiler") ` [@Yu_2012] 包
+也可以使用下载的 KEGG 数据执行这些分析。
+此外，`r Biocpkg("EnrichmentBrowser")`
+[@Geistlinger_2016] 包另外提供了对个体途径的基于网络的富集分析。
+这允许将手头的表达数据映射
+到已知的调节相互作用。
 
 
 # 会话信息
 
-As the last part of this document, we call the function *sessionInfo*,
-which reports the version numbers of R and all the packages used in
-this session. It is good practice to always keep such a record of this
-as it will help to track down what has happened in case an R script
-ceases to work or gives different results because the functions have
-been changed in a newer version of one of your packages. By including
-it at the bottom of a script, your reports will become more reproducible.
+作为本文档的最后一部分，我们调用函数 *sessionInfo*,
+它报告 R 的版本号以及此会话中使用的所有包。
+优良作法是始终保留这样的记录，
+因为它将有助于跟踪 R 脚本停止工作或给出不同结果时发生的情况，
+因为功能已在您的某个软件包的较新版本中更改。 
+通过将其包含在脚本的底部，
+您的报告将变得更加可重复。
 
-The session information should also *always*
-be included in any emails to the
-[Bioconductor support site](https://support.bioconductor.org) along
-with all code used in the analysis.
+会话信息也应始终包含在任何发送到
+[Bioconductor support site](https://support.bioconductor.org)
+支持网站的电子邮件中，
+以及分析中使用的所有代码。
 
 ```{r}
 gc()
